--- a/app/views/shared/_organizations_to_watch.html.erb
+++ b/app/views/shared/_organizations_to_watch.html.erb
@@ -8,17 +8,20 @@
         <th class='txt-c fs-m th-w'><a href="<%= show_path(organization) %>">
           <%= organization.name %></a></td>
         </th>
+        <% if @logged_in %>
+        <th><%= button_to " Watch ", watch_path(organization.user_id), :class => "btn-success btn-xs",:"aria-hidden"=> "true", :method => :post  %></th>
+        <% else %>
+        <!-- this below button logins in but does not redirect to the right page -->
+        <th><%= button_to " Watch ", "/auth/twitter", :class => "btn-success btn-xs watch-button", :"aria-hidden"=> "true", :method => :post, :headers => { :organization => organization.user }  %></th>
+        <% end %>
+
       </thead>
           <% @candidates_endorsed_by_orgs[index].each do |twitteruser| %>
         <tr>
             <td><%= twitteruser.name %></td>
-          <% if @logged_in %>
-          <td><%= button_to " Watch ", watch_path(organization.user_id), :class => "btn-success btn-xs",:"aria-hidden"=> "true", :method => :post  %></td>
-          <% else %>
-          <!-- this below button logins in but does not redirect to the right page -->
-          <td><%= button_to " Watch ", "/auth/twitter", :class => "btn-success btn-xs watch-button", :"aria-hidden"=> "true", :method => :post, :headers => { :organization => organization.user }  %></td>
+
         </tr>
-        <% end %>
+
       <% end %>
     </table>
   </div>
