--- a/app/views/shared/_candidates_to_watch.html.erb
+++ b/app/views/shared/_candidates_to_watch.html.erb
@@ -8,17 +8,17 @@
           <th class='txt-c fs-m th-w'><a href="<%= show_path(candidate) %>">
           <%= candidate.name %></a></td>
         </th>
+        <% if @logged_in %>
+        <th><%= button_to "Endorse", endorse_path(candidate.user.id), :class => "btn-success btn-xs",:"aria-hidden"=> "true", :method => :post  %></th>
+        <% else %>
+        <!-- this below button logins in but does not redirect to the right page -->
+        <th><%= button_to "Endorse", login_and_endorse_path, :class => "btn-success btn-xs",:"aria-hidden"=> "true", :method => :post, :headers => { :organization => candidate.user }  %></th>
+        <% end %>
       </thead>
       <% @orgs_endorsing_candidates[index].each do |twitteruser| %>
       <tr>
         <td><%= twitteruser.name %></td>
-        <% if @logged_in %>
-        <td><%= button_to "Watch", watch_path(candidate.user.id), :class => "btn-success btn-xs",:"aria-hidden"=> "true", :method => :post  %></td>
-        <% else %>
-        <!-- this below button logins in but does not redirect to the right page -->
-        <td><%= button_to "Watch", login_and_watch_path, :class => "btn-success btn-xs",:"aria-hidden"=> "true", :method => :post, :headers => { :organization => candidate.user }  %></td>
       </tr>
-      <% end %>
       <% end %>
     </table>
   </div>
