Resize images to 200x200

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class='row'>
   <div class="col-md-3">
     <div class="mg-r">
-      <img src=<%= @twitter_profile_image %> class='debug img-thumbnail' height="200" width="200">
+      <img src=<%= @twitter_profile_image %> class='debug img-thumbnail' style="min-height: 200px; min-width: 200px">
       <ul class='debug'>
         <li class='fs-xl mg-t p-l'><%= @twitter_profile_name %></li>
         <li class='fs-m p-l'><%= @twitter_handle %></li>
