added description to candidates home

--- a/app/views/shared/_candidates_to_watch.html.erb
+++ b/app/views/shared/_candidates_to_watch.html.erb
@@ -9,16 +9,14 @@
           <%= candidate.name %></a></td>
         </th>
       </thead>
-      <% @orgs_endorsing_candidates[index].each do |twitteruser| %>
       <tr>
-        <td><%= twitteruser.name %></td>
+        <td><%= candidate.description %></td>
         <% if @logged_in %>
         <td><%= button_to "Watch", watch_path(candidate.user.id), :class => "btn-success btn-xs",:"aria-hidden"=> "true", :method => :post  %></td>
         <% else %>
         <!-- this below button logins in but does not redirect to the right page -->
         <td><%= button_to "Watch", login_and_watch_path, :class => "btn-success btn-xs",:"aria-hidden"=> "true", :method => :post, :headers => { :organization => candidate.user }  %></td>
       </tr>
-      <% end %>
       <% end %>
     </table>
   </div>
