--- a/app/views/shared/_organizations_to_watch.html.erb
+++ b/app/views/shared/_organizations_to_watch.html.erb
@@ -6,47 +6,45 @@
       <thead>
         <tr class='debug'>
           <th class='txt-c fs-m th-w'><a href="<%= show_path(organization) %>">
-          <%= organization.name %></a></td>
-        </th>
-        <% if @logged_in %>
-        <th><%= button_to " Watch ", watch_path(organization.user_id), :class => "btn-success btn-xs",:"aria-hidden"=> "true", :method => :post  %></th>
-        <% else %>
-        <!-- this below button logins in but does not redirect to the right page -->
-        <th><%= button_to " Watch ", "/auth/twitter", :class => "btn-success btn-xs watch-button", :"aria-hidden"=> "true", :method => :post, :headers => { :organization => organization.user }  %></th>
+            <%= organization.name %></a></td>
+          </th>
+          <% if @logged_in %>
+          <th><%= button_to " Watch ", watch_path(organization.user_id), :class => "btn-success btn-xs",:"aria-hidden"=> "true", :method => :post  %></th>
+          <% else %>
+          <!-- this below button logins in but does not redirect to the right page -->
+          <th><%= button_to " Watch ", "/auth/twitter", :class => "btn-success btn-xs watch-button", :"aria-hidden"=> "true", :method => :post, :headers => { :organization => organization.user }  %></th>
+          <% end %>
+        </thead>
+        <% @candidates_endorsed_by_orgs[index].each do |twitteruser| %>
+        <tr>
+          <td><%= twitteruser.name %></td>
+        </tr>
         <% end %>
-      </thead>
-      <% @candidates_endorsed_by_orgs[index].each do |twitteruser| %>
-      <tr>
-        <td><%= twitteruser.name %></td>
-      </tr>
-      <% end %>
-    </table>
+      </table>
+    </div>
   </div>
-</div>
-<% end %>
+  <% end %>
 <script>
-$(document).ready(function() {
-watchListener();
-});
-var watchListener = function () {
-$(".button_to").one("submit", function(e) {
-e.preventDefault();
-var url = this.action;
-var $watchButton = $(this).parent();
-var $watchedCandidate = $(this).parent().parent();
-watch(url, $watchButton, $watchedCandidate);
-});
-var watch = function(url, $watchButton, $watchedCandidate){
-console.log(url);
-$.ajax({
-url: url,
-method: "post"
-}).done(function() {
-// $watchButton.hide();
-$watchedCandidate.toggle("fast");
-}).fail(function(){
-console.log("fail");
-});
-}
-}
+  $(document).ready(function() {
+    watchListener();
+  });
+  var watchListener = function () {
+    $(".button_to").one("submit", function(e) {
+      e.preventDefault();
+      var url = this.action;
+      var $watchedCandidate = $(this).closest(".rcorners.bg-w.row")
+      watch(url, $watchedCandidate);
+    });
+    var watch = function(url, $watchedCandidate){
+      console.log(url);
+      $.ajax({
+        url: url,
+        method: "post"
+      }).done(function() {
+        $watchedCandidate.toggle("fast");
+      }).fail(function(){
+        console.log("fail");
+      });
+    }
+  }
 </script>
