Leave message to Tom to add endorsement function

--- a/app/views/shared/_candidate_endorse.html.erb
+++ b/app/views/shared/_candidate_endorse.html.erb
@@ -2,11 +2,16 @@
 <div class='rcorners bg-w row txt-c'>
   <img src="<%= twitteruser.image %>" alt="" class='mg p-s col-md-2'>
   <div class='col-md-9 mg p-s debug'>
-  <a href="<%= show_path(twitteruser) %>"><strong><%= twitteruser.name %></strong></a href="#">
+  <a href="<%= show_path(twitteruser) %>">
+    <strong>
+      <%= twitteruser.name %>
+    </strong>
+  </a>
   <ul class='mg-l'>
     <li><%= twitteruser.description %></li>
-    <li>Endorsed by: Sierra Club</li>
-    <li>Endorsed by: Planned Parenthood</li>
+    <li>
+      <p> TO TOM: Please add endorsement button </p>
+    </li>
   </ul>
 </div>
 </div>
