--- a/app/views/shared/_candidates_to_watch.html.erb
+++ b/app/views/shared/_candidates_to_watch.html.erb
@@ -20,7 +20,7 @@
           <% if @logged_in %>
             <tr>
               <td>
-                <%= button_to "Endorse", endorse_path(candidate.user.id), :class => "btn-success btn-xs",:"aria-hidden"=> "true", :method => :post  %>
+                <%= button_to "Endorse", endorse_path(candidate.user.id), :class => "btn-success btn-xs endorse-button",:"aria-hidden"=> "true", :method => :post  %>
               </td>
             </tr>
           <% else %>
@@ -35,3 +35,31 @@
   </div>
 </div>
 <% end %>
+
+
+<script>
+$(document).ready(function(){
+  endorseListener();
+});
+
+var endorseListener = function(){
+  $("input.btn-success.btn-xs.endorse-button").on("click", function(e){
+    e.preventDefault();
+    var url = this.parentElement.action;
+    var $target = $(this).closest(".rcorners.bg-w.row")
+    endorse(url, $target);
+  })
+
+  var endorse = function(url, $target) {
+    $.ajax({
+      url: url,
+      method: "post"
+    }).done(function(){
+      $target.toggle("fast");
+    }).fail(function(){
+      console.log("fail");
+    })
+  }
+}
+
+</script>
