Unendorse logic and front end linked

--- a/app/views/shared/_candidate_endorse.html.erb
+++ b/app/views/shared/_candidate_endorse.html.erb
@@ -10,10 +10,37 @@
   <ul class='mg-l'>
     <li><%= twitteruser.description %></li>
     <li>
-      <%= button_to "Unendorse", unendorse_path, :class => "btn-danger btn-xs unendorse-button" %>
+      <%= button_to "Unendorse", unendorse_path(twitteruser.user), :class => "btn-danger btn-xs unendorse-button" %>
     </li>
   </ul>
 </div>
 </div>
 <% end %>
 
+
+<script>
+$(document).ready(function(){
+  unendorseListener();
+})
+
+var unendorseListener = function(){
+  $("input.btn-danger.btn-xs.unendorse-button").on("click", function(e){
+    e.preventDefault();
+    var url = this.parentElement.action;
+    var $target = $(this).closest(".rcorners.bg-w.row.txt-c");
+    unendorse(url, $target);
+  })
+
+var unendorse = function(url, $target) {
+  $.ajax({
+    url: url,
+    method: "post"
+  }).done(function(){
+      $target.toggle("fast");
+    }).fail(function(){
+      console.log("fail");
+    })
+  }
+}
+
+</script>
