--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -41,9 +41,11 @@
   </div>
   <div class="col-md-5 bg-w debug mg bg-lg">
     <form class="navbar-form">
-      <div class="form-group" style="display:inline;">
+      <div class="form-group search-bar" style="display:inline;">
         <div class="input-group" style="display:table;">
-          <span class="input-group-addon" style="width:1%;"><span class="glyphicon glyphicon-search"></span></span>
+          <span class="input-group-addon" style="width:1%;">
+            <span class="glyphicon glyphicon-search"></span>
+          </span>
           <input id="peopleSearchBar" class="form-control" name="search" placeholder="Search for Candidates and Endorsers" autocomplete="off" autofocus="autofocus" type="text">
         </div>
       </div>
