--- a/app/assets/javascripts/users.js.erb
+++ b/app/assets/javascripts/users.js.erb
@@ -5,17 +5,28 @@ $(document).ready(function(){
 })
 
 var bindSearch = function(){
-  $('.search-bar').on('click', '.glyphicon', function(event){
+  $('form.navbar-form').on('submit', function(event){
+    event.preventDefault();
+
+    var data = $("#peopleSearchBar").val();
     $.ajax({
-      url:
+      url: 'search',
+      method: 'post',
+      dataType: 'html',
+      data: {search_input: data}
+    }).done(function(responseData){
+      console.log('success');
+      console.log(responseData);
+      displayResults(responseData);
     })
-  // search($(event.target).parent().next().val());
 })
 }
 
-var search = function(input){
+var displayResults = function(responseData){
+  console.log('hi')
+  debugger
+  $('.tab-content').html('<h2>hi</h2>')
 }
-
 
 
 $(function() {
