Complete search function

--- a/app/assets/javascripts/users.js.erb
+++ b/app/assets/javascripts/users.js.erb
@@ -4,6 +4,8 @@ $(document).ready(function(){
   bindSearch();
 })
 
+
+
 var bindSearch = function(){
   $('form.navbar-form').on('submit', function(event){
     event.preventDefault();
@@ -18,16 +20,35 @@ var bindSearch = function(){
       console.log('success');
       console.log(responseData);
       displayResults(responseData);
+      unendorseListener();
     })
 })
 }
 
 var displayResults = function(responseData){
   console.log('hi')
-  debugger
-  $('.tab-content').html('<h2>hi</h2>')
+  $('.tab-content').html(responseData)
 }
 
+var unendorseListener = function(){
+  $("input.btn-danger.btn-xs.unendorse-button").on("click", function(e){
+    e.preventDefault();
+    var url = this.parentElement.action;
+    var $target = $(this).closest(".rcorners.bg-w.row.txt-c");
+    unendorse(url, $target);
+  })
+
+var unendorse = function(url, $target) {
+  $.ajax({
+    url: url,
+    method: "post"
+  }).done(function(){
+      $target.toggle("fast");
+    }).fail(function(){
+      console.log("fail");
+    })
+  }
+}
 
 $(function() {
     var availableTags = [
