--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -39,13 +39,19 @@
 
       </ul>
 
-
+      <% if request.path != root_path %>
+        <% placeholder = "p-a" %>
+      <% else %>
+        <% placeholer = "" %>
+      <% end %>
+      <% if request.path != root_path %>
       <form class="navbar-form navbar-right" role="search">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
       </form>
+    <% end %>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
