Update classnames to differentiate nav and index searches

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -40,7 +40,7 @@
     </div>
   </div>
   <div class="col-md-5 bg-w debug mg bg-lg">
-    <form class="navbar-form">
+    <form class="navbar-form index-search">
       <div class="form-group search-bar" style="display:inline;">
         <div class="input-group" style="display:table;">
           <span class="input-group-addon" style="width:1%;">
