--- a/app/assets/stylesheets/customs.css.scss
+++ b/app/assets/stylesheets/customs.css.scss
@@ -123,8 +123,8 @@ dt { margin-top: 1em; }
 .navbar-brand
   {
       position: absolute;
-      width: 100%;
-      left: 0;
+      width: 60%;
+      left: 20%;
       text-align: center;
       margin: auto;
   }
