--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -10,7 +10,7 @@
       </button>
     </div>
 
-    <a class="debug navbar-brand" href="/"><%= image_tag("Capitol.png", size: "25x23") %></a>
+    <a class="debug navbar-brand w-m" href="/"><%= image_tag("Capitol.png", size: "25x23") %></a>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
@@ -45,11 +45,11 @@
         <% placeholer = "" %>
       <% end %>
       <% if request.path != root_path %>
-      <form class="navbar-form navbar-right" role="search">
+      <form class="navbar-form navbar-right nav-search" role="search">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
-        <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
+        <button type="submit" class="btn btn-default z"><span class="glyphicon glyphicon-search"></span></button>
       </form>
     <% end %>
     </div><!-- /.navbar-collapse -->
