--- a/app/views/shared/_organizations_to_watch.html.erb
+++ b/app/views/shared/_organizations_to_watch.html.erb
@@ -1,29 +1,10 @@
-<% @organizations.each_with_index do |organization, index| %>
-<div class='rcorners bg-w row txt-c'>
-  <img src=<%= organization.image %> alt="" class='mg p-s col-md-2 img-responsive'>
-  <div class='col-md-9 mg p-s debug'>
-    <table class='debug w txt-c'>
-      <thead>
-        <tr class='debug'>
-          <th class='txt-c fs-m th-w'><a href="<%= show_path(organization) %>">
-            <%= organization.name %></a></td>
-          </th>
-          <% if @logged_in %>
-          <th><%= button_to " Watch ", watch_path(organization.user_id), :class => "btn-success btn-xs watch-button",:"aria-hidden"=> "true", :method => :post  %></th>
-          <% else %>
-          <!-- this below button logins in but does not redirect to the right page -->
-          <th><%= button_to " Watch ", "/auth/twitter", :class => "btn-success btn-xs watch-button", :"aria-hidden"=> "true", :method => :post, :headers => { :organization => organization.user }  %></th>
-          <% end %>
-        </thead>
-        <% @candidates_endorsed_by_orgs[index].each do |twitteruser| %>
-        <tr>
-          <td><%= twitteruser.name %></td>
-        </tr>
-        <% end %>
-      </table>
-    </div>
-  </div>
+<% @organizations.each_with_index do |org, index| %>
+  <% @org = org %>
+  <% @index = index %>
+  <%= render "shared/organization", object: @org, object: @index  %>
+
   <% end %>
+
 <script>
   $(document).ready(function() {
     watchListener();
