--- a/app/views/shared/_candidate.html.erb
+++ b/app/views/shared/_candidate.html.erb
@@ -1,38 +1,35 @@
-
-<div class='rcorners bg-w row'>
-  <img src=<%= @can.image %> alt="" class='mg p-s col-md-2 img-responsive'>
-  <div class='col-md-9 mg p-s debug'>
-    <table class='debug w txt-c'>
-      <thead>
-        <tr class='debug'>
-          <th class='txt-c fs-m th-w'>
-            <a href="<%= show_path(@can) %>">
-              <%= @can.name %>
-            </a>
-          </th>
-        </tr>
-      </thead>
+<div class='rcorners bg-w row wrapper'>
+  <div class='small'>
+    <img src=<%= @can.image %> alt="" class='mg p-s col-md-2 img-responsive'>
+    <div class='col-md-9 mg p-s debug body'>
+      <table class='debug w txt-c'>
+        <thead>
+          <tr class='debug'>
+            <th class='txt-c fs-m th-w'>
+              <a href="<%= show_path(@can) %>">
+                <%= @can.name %>
+              </a>
+            </th>
+            <% if @logged_in %>
+            <th>
+              <%= button_to "Endorse", endorse_path(@can.user.id), :class => "btn-success btn-xs endorse-button",:"aria-hidden"=> "true", :method => :post  %>
+            </th>x
+            <% else %>
+            <!-- this below button logins in but does not redirect to the right page -->
+            <th>
+              <%= button_to "Endorse", login_path, :class => "btn-success btn-xs",:"aria-hidden"=> "true", :method => :post, :headers => { :organization => @can.user }  %>
+            </th>
+          </tr>
+          <% end %>
+        </thead>
+        <tbody>
           <tr>
             <td>
               <%= @can.description %>
             </td>
           </tr>
-          <% if @logged_in %>
-            <tr>
-              <td>
-                <%= button_to "Endorse", endorse_path(@can.user.id), :class => "btn-success btn-xs endorse-button",:"aria-hidden"=> "true", :method => :post  %>
-              </td>
-            </tr>
-          <% else %>
-          <!-- this below button logins in but does not redirect to the right page -->
-            <tr>
-            <td>
-              <%= button_to "Endorse", login_path, :class => "btn-success btn-xs",:"aria-hidden"=> "true", :method => :post, :headers => { :organization => @can.user }  %>
-            </td>
-          </tr>
-          <% end %>
-    </table>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
-
-
