watch button in profile page done

--- a/app/views/shared/_organization_watch.html.erb
+++ b/app/views/shared/_organization_watch.html.erb
@@ -68,7 +68,7 @@ var watchOrganizationListener = function() {
     request.done(function() {
       console.log("success");
       // $watchButton.css("visibility", "hidden");
-      $watchButton.html("<li class='btn btn-success btn-large home-right-button debug'>Watching</li>")
+      $watchButton.html("<li class='btn btn-success btn-large home-right-button debug'>Currently Watching</li>")
     });
 
     request.fail(function() {
