--- a/app/views/shared/_candidate.html.erb
+++ b/app/views/shared/_candidate.html.erb
@@ -30,7 +30,7 @@
           </tr>
         </tbody>
       </table>
-      <%= render 'shared/stats' %>
+      <%= render 'shared/stats', object: @can %>
     </div>
   </div>
 </div>
