--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -14,6 +14,6 @@
     </ul>
   </span>
   <span class='avatar'>
-    <%= render 'shared/avatar' %>
+    <%= render 'shared/avatar', object: @can %>
   </span>
 </div>
