--- a/app/views/shared/_district_form.html.erb
+++ b/app/views/shared/_district_form.html.erb
@@ -2,7 +2,7 @@
 
 <li class='fs-l mg-t p-l'><%= f.label :where_will_you_vote? %></li>
 
-<li class='fs-xl mg-t center-button'><%= f.text_field :populate_district , :class => "glyphicon-search", :placeholder => "Input your district", :id => "setDistrict" %></li>
+<li class='fs-xl mg-t center-button'><%= f.text_field :populate_district , :class => "glyphicon-search", :id => "setDistrict" %></li>
 
 <li class='fs-xl mg-t p-xl'><%= f.submit "Update your district", :class => "btn btn-warning form-control" %></li>
 
