--- a/app/assets/stylesheets/customs.css.scss
+++ b/app/assets/stylesheets/customs.css.scss
@@ -91,6 +91,8 @@ ul { list-style: none; }
 
 .fw-t { font-weight: 300}
 
+.fw-tt { font-weight: 500}
+
 .body-not-bs {
   background-color:#F7FFFC;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
