--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -1,19 +1,19 @@
-<div class='stats clearfix mg-t'>
-  <span class='d-i pull-left debug b-t b-b mg-t'>
+<div class='stats clearfix'>
+  <span class='d-i pull-left debug b-t b-b'>
     <ul class='p-s mg-r b-r'>
       <li class="d-i debug">
         <a href="#">
-          <span class='fs-xs'>WATCHED<span class='d-b txt-c fs-m fw-tr'>100</span></span>
+          <span class='fs-xs'>WATCHED<span class='d-b txt-c fs-m'>100</span></span>
         </a>
       </li>
       <li class="d-i debug">
         <a href="#">
-          <span class='fs-xs'>ENDORSED<span class='d-b txt-c fs-m fw-tr'>32</span></span>
+          <span class='fs-xs'>ENDORSED<span class='d-b txt-c fs-m'>32</span></span>
         </a>
       </li>
     </ul>
   </span>
-  <span class='avatar pull-left debug mg-b b-t b-b sp-height mg-t'>
+  <span class='avatar pull-left debug mg-b b-t b-b sp-height'>
     <% @orgs_endorsing_a_candidate[@index].each do |twitteruser| %>
       <img src=<%= twitteruser.image %> class='debug img-thumbnail d-i sm-avatar txt-c'>
     <% end %>
