Implement stats on orgs tab

--- a/app/views/shared/_can_stats.html.erb
+++ b/app/views/shared/_can_stats.html.erb
@@ -1,4 +1,4 @@
-<div class='stats clearfix'>
+<div class='stats clearfix mg-t'>
   <span class='d-i pull-left debug b-t b-b'>
     <ul class='p-s mg-r b-r'>
       <li class="d-i debug">
