--- a/app/views/shared/_candidate.html.erb
+++ b/app/views/shared/_candidate.html.erb
@@ -28,7 +28,7 @@
           </tr>
         </tbody>
       </table>
-        <%= render 'shared/stats' %>
+        <%= render 'shared/can_stats' %>
     </div>
   </div>
 </div>
