fix ajax call on index

--- a/app/views/shared/_organizations_to_watch.html.erb
+++ b/app/views/shared/_organizations_to_watch.html.erb
@@ -5,11 +5,8 @@
   <% end %>
 
 <script>
-  $(document).ready(function() {
-    watchListener();
-  });
   var watchListener = function () {
-    $("input.btn-success.btn-xs.watch-button").on("click", function(e) {
+    $("form.watch-button").on("hover", function(e) {
       e.preventDefault();
       var url = this.parentElement.action;
       var $watchedCandidate = $(this).closest(".rcorners.bg-w.row")
