--- a/app/views/shared/_organization.html.erb
+++ b/app/views/shared/_organization.html.erb
@@ -11,14 +11,10 @@
               </a>
             </th>
             <% if @logged_in %>
-            <th>
-              <%= button_to "Endorse", endorse_path(@org.user.id), :class => "btn-success btn-xs endorse-button",:"aria-hidden"=> "true", :method => :post  %>
-            </th>
-            <% else %>
-            <!-- this below button logins in but does not redirect to the right page -->
-            <th>
-              <%= button_to "Endorse", login_path, :class => "btn-success btn-xs",:"aria-hidden"=> "true", :method => :post, :headers => { :organization => @org.user }  %>
-            </th>
+            <th><%= button_to " Watch ", watch_path(@org.user_id), :form_class => "watch-index-button",:class => "btn-success btn-xs watch-index-button",:"aria-hidden"=> "true", :method => :post  %></th>
+          <% else %>
+          <!-- this below button logins in but does not redirect to the right page -->
+          <th><%= button_to " Watch ", "/auth/twitter", :class => "btn-success btn-xs", :"aria-hidden"=> "true", :method => :post, :headers => { :organization => @org.user }  %></th>
           </tr>
           <% end %>
         </thead>
