--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,7 +2,7 @@
   <div class="col-md-3 debug mg">
     <% if @current_user %>
     <div class='row mg p bg-w'>
-      <img src=<%= @twitter_profile_image %> class='debug img-thumbnail col-md-3'>
+       <a href="<%= show_path(@current_user) %>"><img src=<%= @twitter_profile_image %> class='debug img-thumbnail col-md-3'></a>
       <div class='col-md-9'>
         <div class='h-xs debug'></div>
         <ul class='debug'>
