--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -85,5 +85,15 @@
       <dd class='c-gy'><span>120</span> endorsements for this candidate</dd>
     </dl>
   </div>
+  <div>
+    <h4 class='fw-t txt-c'>#Election2016</h4>
+    <dl class='p-l-m'>
+      <% current_user.twitteruser.twitter.search("#Election2016", result_type: "recent").take(5).collect do |tweet| %>
+      <dt><%= tweet.text %></dt>
+      <dd class='c-gy'>by <%= tweet.user.screen_name %></dd>
+      <% end %>
+    </dl>
+
+  </div>
 </div>
 </div>
