Add hover effect

--- a/app/views/shared/_organization.html.erb
+++ b/app/views/shared/_organization.html.erb
@@ -1,5 +1,5 @@
 <div class='rcorners bg-w row wrapper'>
-  <div class='small'>
+  <div class='small h'>
     <img src=<%= @org.image %> alt="" class='mg p-s col-md-2 img-responsive'>
     <div class='col-md-9 mg p-s debug body'>
       <table class='debug w txt-c'>
