--- a/app/assets/stylesheets/customs.css.scss
+++ b/app/assets/stylesheets/customs.css.scss
@@ -3,6 +3,8 @@
 
 .debug { border: 0px solid red; }
 
+.h:hover { background-color: #B1E8C9; }
+
 .b-t { border-top: 1px solid #e1e8ed; }
 
 .b-b { border-bottom: 1px solid #e1e8ed; }
