--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -85,6 +85,7 @@
       <dd class='c-gy'><span>120</span> endorsements for this candidate</dd>
     </dl>
   </div>
+  <% if @logged_in %>
   <div>
     <h4 class='fw-t txt-c'>#Election2016</h4>
     <dl class='p-l-m'>
@@ -95,5 +96,6 @@
     </dl>
 
   </div>
+  <% end %>
 </div>
 </div>
