--- a/app/views/users/report_card.html.erb
+++ b/app/views/users/report_card.html.erb
@@ -1,7 +1,7 @@
 <div class='row'>
   <div class="col-md-2">
     <div class="mg-r">
-      <img src=<%= @twitter_profile_image %> class='debug img-thumbnail' height="200" width="200">
+      <a href="<%= show_path(@user) %>"><img src=<%= @twitter_profile_image %> class='debug img-thumbnail' height="200" width="200"></a>
       <ul class='d-i debug'>
         <li class='fs-xl mg-t p-l'><%= @twitter_profile_name %></li>
         <li class='fs-m p-l'><%= @twitter_handle %></li>
@@ -32,42 +32,9 @@
       <p class='fs-xm txt-c'>Which candidates share my values?</p>
       <h4 class='m-a w-m p-t'>National Election 2016:</h4>
 
+      <%= render 'shared/report_card' %>
 
 
-
-      <table class='table table-hover m-a w-m'>
-          <% @report_card.offices.each do |office| %>
-              <thead>
-                  <tr>
-                      <th colspan="2" class='txt-c p-t'><%= office[:name] %></th>
-                  </tr>
-              </thead>
-                <% if office[:candidates] %>
-                  <% office[:candidates].each do |candidate| %>
-                      <tr>
-                          <td><%= candidate[:name] %></td>
-                          <td>
-                              <details>
-                                  <summary><%= candidate[:endorser_count] %></summary>
-                                  <ul>
-                                      <% candidate[:endorsers].each do |endorser| %>
-                                      <li><%= endorser.name %></li>
-                                      <% end %>
-                                  </ul>
-                              </details>
-                          </td>
-                      </tr>
-                      <% end %>
-                    <% else %>
-                    <tr>
-                        <td>No Candidates Endorsed!</td>
-                        <td>
-                        </td>
-                    </tr>
-                      <tr></tr>
-                    <% end %>
-          <% end %>
-      </table>
     </div>
   </div>
 </div>
