--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -89,7 +89,7 @@
   <div>
     <h4 class='fw-t txt-c'>#Election2016</h4>
     <dl class='p-l-m'>
-      <% current_user.twitteruser.twitter.search("#Election2016", result_type: "recent").take(5).collect do |tweet| %>
+      <% current_user.twitteruser.twitter.search("#Election2016", result_type: "popular").take(5).collect do |tweet| %>
       <dt><%= tweet.text %></dt>
       <dd class='c-gy'>by <%= tweet.user.screen_name %></dd>
       <% end %>
