--- a/app/views/shared/_organization.html.erb
+++ b/app/views/shared/_organization.html.erb
@@ -11,6 +11,7 @@
               </a>
             </th>
           <% if @current_user != @user %>
+            <th><%= button_to " Watch ", watch_path(@org_ids[@index]), :form_class => "watch-index-button",:class => "btn-success btn-xs watch-index-button",:"aria-hidden"=> "true", :method => :post  %></th>
           <% else %>
           <% if !@current_user_watches_org[@index] %>
             <th><%= button_to " Watch ", watch_path(@org_ids[@index]), :form_class => "watch-index-button",:class => "btn-success btn-xs watch-index-button",:"aria-hidden"=> "true", :method => :post  %></th>
